start switching to Jekyll (static site generator in Ruby)

--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
 
-English grammar ;)
+ * English grammar ;)
 
-GPG key- make sure you send it to servers
+ * GPG key- make sure you send it to servers (sure I did)
 
-add 'Android' section
+ * add 'Android' section (MePlayer, ColorNotes, MapsMe )
 
-switch to git/svn or may be mercural
+ * [done] switch to git
 
+ * add EasyRepo to projects
 
+ * publish Palmano source code
 
-
+ * add NTFS_dir_INDEX to drafts
 
 
