TODO: add sloccount and 'tetris' screenshot

--- a/TODO
+++ b/TODO
@@ -13,4 +13,7 @@
 
  * add NTFS_dir_INDEX to drafts
 
+ * tetris - add separated page with a screenshots
+
+ * add sloccount statistic to source archives, language and API description
 
