--- a/README
+++ b/README
@@ -1,13 +1,18 @@
   Sashnov Alexander's homepage
   
-This is a source of my homepage. It also need symlink for directory
-'files' and 'img' to dir contains files and images for page.
+In the past it was a Makefile which converts .m4 files directly to .html
+But since 2016 hosting at http://sashnov.nm.ru/ was closed and I decide
+to move my page to pages.github.com  The service uses Jekyll for server-
+side generation of .html files out of .md (MarkDown) files.
+
+It seemed easy to convert my .m4 files to .md so I have a go.
+It is hard to install the latest version of Jekyll so I use
+the official docker container jekyll/jekyll.
 
 
-  Building
-  
-For build it you must have installed folowwing programs:
+  Getting started
 
+1. Install base tools:
 make		GNU make utilite
 bash		Shell (or any other shell like sh)
 m4		GNU macroprocessor
@@ -15,56 +20,40 @@ awk		GNU awk interpreter (gawk)
 ImageMagick	Image processing tool
 
 
-Build all project:
+2. install Docker: https://docs.docker.com/engine/installation/
+
+3. docker pull jekyll/jekyll:pages
+   ( :pages tag is the closest to GitHub Pages version)
+
+   See for help: https://github.com/jekyll/docker/wiki
+       https://github.com/jekyll/docker/wiki/Usage:-Running
+   
+4. Build and run
 
   make clean
   make
 
-Archive it (buck up or distrib):
+  docker run --rm --label=jekyll --volume=$(pwd):/srv/jekyll \
+    -it -p 127.0.0.1:4000:4000 jekyll/jekyll:pages
 
-  make dist
 
-Check local links:
-
-  make check
-
-Update page in internet through FTP:
-
-  make update
+5. Open in browser http://localhost:4000/
 
 
 
-Some comments
+https://help.github.com/articles/using-jekyll-as-a-static-site-generator-with-github-pages/
+https://github.com/jekyll/jekyll
+https://github.com/jekyll/jekyll-help
+https://jekyllrb.com/
+http://jekyllrb.com/docs/structure/
+
+https://jekyllrb.com/docs/posts/  - how to insert images
+   ![text description](/img/file.png)
+
+http://jekyllbootstrap.com/
 
 
-* recode to 1251 needs for hosting on newmail.ru - it puts information about document encode in
-http header:
-
-HTTP/1.0 200 OK
-Date: Sat, 17 Jan 2004 07:22:36 GMT
-Server: Apache/1.3.27 (Unix)
-Last-Modified: Sat, 03 Jan 2004 06:47:38 GMT
-ETag: "3cc9f0-1aee-3ff6658a"
-Accept-Ranges: bytes
-Content-Length: 6894
-Content-Type: text/html; charset=windows-1251
-X-Cache: MISS from ns.plesk.ru
-Connection: keep-alive
-
-Becouse I add recode to exceed validator.w3c.org warning.
-
-
-* You cat configure ftp (standart ftp client) for automaticaly update your files.
-For do this, create .netrc file in your home dir with contents:
-
-ine ftp.newmail.ru
-login sashnov.nm.ru
-password d2k_75fh3_1x
-macdef init
-lcd /home/asashnov/projects/homepage
-put about.html
-put ayengine.html
-......put other files.........
-exit
-
-
+see also (Jekyll recomended):  - cheap hosting (I don't need it- pages.github.com)
+https://www.nearlyfreespeech.net/
+also:
+https://beget.ru/free-hosting
