fix English and MarkDown (remove HTML and M4 macros remains)

--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
 
- * English grammar ;)
-
  * GPG key- make sure you send it to servers (sure I did)
 
  * add 'Android' section (MePlayer, ColorNotes, MapsMe )
@@ -19,7 +17,11 @@
 
  * review  books.m4 and Private/Notes/books.txt
  
+ - [World of Spectrum](http://www.worldofspectrum.org/)
+    The official world archive for the Sinclair ZX Spectrum
+really ????????/ oficial ????????
 
+ * check *timeline:* headers with dates in source archives.
 
 
 BEGIN:VTODO
