--- a/i8080emu.md
+++ b/i8080emu.md
@@ -1,42 +1,45 @@
 ---
 title: i8080emu
-description: i8080 emulator is my diplom work in NSTU
+description: i8080 emulator is my graduate work at NSTU
 keywords: i8080 emulator assembler help
 layout: default
 ---
- 
+
 i8080 emulator
 --
+
 ![i8080emu main window](img/i8080emu.png) 
  
-I wrote this emulator as my diplom work for engeneer degree in Jan-May 2003
-under Borland C++ Builder. Why I not start write it in GTK an begin?
-Seems because I have no experience in Linux/GTK at that time and aftaid
-of fails. Also I still not know so usable help system as WinHelp.
- 
- 
+I wrote this emulator as my graduate work for an engeneer degree
+in Jan-May 2003 using Borland C++ Builder 5.
+
+Why didn't I start writting it in GTK+ at the begining?
+At the moment I have no experience with GTK+ / Qt and fear of failure
+stopped me. Another reason was I didn't know a good cross-platform help system
+so Help file is written entirely in RTF for help compiler.
+
 Platform: Windows
- 
- 
+
 I still hope I can rewrite it using Qt, GTK+ or wxWindow user interface library
 for make it cross platform compatibility.
  
-## Downloads
- - <a href="files/i8080emu.zip">i8080emu.zip
-  (1092 Kb)</a>   - Binary and help files<br />
- - <a href="files/i8080emu-src.zip">i8080emu-src.zip
-  (320 Kb)</a>   - Source code<br />
- - <a href="files/i8080asm-1.1.tgz">i8080asm-1.1.tgz
-  (24 Kb)</a>   - i8080 assembler as separate Unix source package<br />
+Downloads
+---
+ - <a href="files/i8080emu.zip">i8080emu.zip (1092 Kb)</a> Binary and help files
+ - <a href="files/i8080emu-src.zip">i8080emu-src.zip (320 Kb)</a> Source code
+ - <a href="files/i8080asm-1.1.tgz">i8080asm-1.1.tgz (24 Kb)</a>
+     i8080 assembler as separate Unix source package<br />
   
-## Links
- - <a href="http://sourceforge.net/projects/i8086emu">http://sourceforge.net/projects/i8086emu</a> -  This is multi-platform emulator for Intel 8086 microprocessor with GUI debbuger
-     and plugins for hardware emulation  <br /><br /> 
- - <a href="http://fuse-emulator.sourceforge.net">http://fuse-emulator.sourceforge.net</a> -  The Free Unix Spectrum Emulator  <br /><br /> 
- - <a href="http://crasm.sourceforge.net/crasm.html">http://crasm.sourceforge.net/crasm.html</a> -  Cross assembler for 6800/6801/6803/6502/65C02/Z80
- Assemble a microprocessor program and produce output file in Intel HEX
- or Motorola S Code from source for 6800/6801/6803/6502/65C02/Z80
- processors. A program listing and a symbol table are also produced
- on the standard output. <br /><br /> 
-  
- 
+Links
+---
+ - <a href="http://sourceforge.net/projects/i8086emu">http://sourceforge.net/projects/i8086emu</a>
+   This is multi-platform emulator for Intel 8086 microprocessor with GUI debbuger
+     and plugins for hardware emulation 
+ - <a href="http://fuse-emulator.sourceforge.net">http://fuse-emulator.sourceforge.net</a>
+     The Free Unix Spectrum Emulator
+ - <a href="http://crasm.sourceforge.net/crasm.html">http://crasm.sourceforge.net/crasm.html</a>
+Cross assembler for 6800/6801/6803/6502/65C02/Z80
+Assemble a microprocessor program and produce output file in Intel HEX
+or Motorola S Code from source for 6800/6801/6803/6502/65C02/Z80
+processors. A program listing and a symbol table are also produced
+on the standard output.
