--- a/i8080emu.md
+++ b/i8080emu.md
@@ -29,7 +29,11 @@ Downloads
  - <a href="files/i8080emu-src.zip">i8080emu-src.zip (320 Kb)</a> Source code
  - <a href="files/i8080asm-1.1.tgz">i8080asm-1.1.tgz (24 Kb)</a>
      i8080 assembler as separate Unix source package<br />
-  
+
+This project is going to be continued at
+git@bitbucket.org:asashnov/i8080.git
+
+
 Links
 ---
  - <a href="http://sourceforge.net/projects/i8086emu">http://sourceforge.net/projects/i8086emu</a>
