--- a/README
+++ b/README
@@ -11,28 +11,30 @@ the official docker container jekyll/jekyll.
 
   Getting started
 
+https://help.github.com/articles/using-jekyll-as-a-static-site-generator-with-github-pages/
+https://help.github.com/categories/github-pages-basics/
+https://help.github.com/articles/further-reading-on-github-pages/
+https://pages.github.com/ - GitHub Pages tutorial
+
 $ sudo apt-get install docker.io
 $ docker pull jekyll/jekyll:pages
 $ make serve
 
-  
-https://github.com/jekyll/docker/issues/109   - my feature request to include docs.
-27 jul 2016 somebody answered
 
+
+More info on Jekyll
 
 https://jekyllrb.com/help/
    Links to sites on Jekyll with sources:
        https://github.com/jekyll/jekyll/wiki/sites
          http://cyborginstitute.org/  already switched to Sphinx 1.2.3 & Alabaster 0.6.2
               https://github.com/bitprophet/alabaster
-              
 
 https://jekyllrb.com/
 http://jekyllrb.com/docs/structure/
 https://jekyllrb.com/docs/posts/  - how to insert images
    ![text description](/img/file.png)
 
-https://help.github.com/articles/using-jekyll-as-a-static-site-generator-with-github-pages/
 https://github.com/jekyll/jekyll
 https://github.com/jekyll/jekyll-help   - NO, just a Gem
 https://github.com/jekyll/docker   - Official Docker container
@@ -40,14 +42,6 @@ https://github.com/jekyll/docker   - Official Docker container
 
 
 http://jekyllbootstrap.com/   - Rakefile with helpers
-
-
-see also (Jekyll recomended):  - cheap hosting (I don't need it- pages.github.com)
-      https://www.nearlyfreespeech.net/
-      also:
-      https://beget.ru/free-hosting
-
-
 
 
 Jekill - 2011  (GitHub)
@@ -65,14 +59,3 @@ Jekyll’s rules
     Unless the file that has a YAML header. These files can make use of the Liquid templating language.
     Unless the file is in _posts. These files build up a data object representing all of your site’s content that can be referenced when templating.
     Posts can specify a permalink to generate a page at a different location than where the post resides in the source directory.
-
-
-
-HTML tag <nav> - ???   - Bootstrap justified-nav example
-
-http://getbootstrap.com/getting-started/#examples
-offcanvas example- may fit for me
-
-explore http://expo.getbootstrap.com/   - examples from people
-
-http://blog.getbootstrap.com/2015/12/08/bootstrap-4-alpha-2/  - Bootstrap 4 alpha 2 ???
