Palmano: link to GitHub libayemu: link to GitHub, V_Soft link to web.archive.org

--- a/README
+++ b/README
@@ -22,6 +22,15 @@ $ make serve
 
 
 
+Markdown format
+---
+
+https://daringfireball.net/projects/markdown/basics
+https://daringfireball.net/projects/markdown/syntax
+
+
+
+
 More info on Jekyll
 
 https://jekyllrb.com/help/
