--- a/pj/i8080emu.md
+++ b/pj/i8080emu.md
@@ -25,9 +25,9 @@ for make it cross platform compatibility.
  
 Downloads
 ---
- - <a href="files/i8080emu.zip">i8080emu.zip (1092 Kb)</a> Binary and help files
- - <a href="files/i8080emu-src.zip">i8080emu-src.zip (320 Kb)</a> Source code
- - <a href="files/i8080asm-1.1.tgz">i8080asm-1.1.tgz (24 Kb)</a>
+ - <a href="../files/i8080emu.zip">i8080emu.zip (1092 Kb)</a> Binary and help files
+ - <a href="../files/i8080emu-src.zip">i8080emu-src.zip (320 Kb)</a> Source code
+ - <a href="../files/i8080asm-1.1.tgz">i8080asm-1.1.tgz (24 Kb)</a>
      i8080 assembler as separate Unix source package<br />
 
 This project is going to be continued at
